<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent">





<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mnTxtNoticeMessage"></TextView><RelativeLayout android:id="@+id/RelativeLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mnBtnOK" android:layout_alignParentRight="true" android:text="@string/txtDone"></Button>
<CheckBox android:layout_width="wrap_content" android:visibility="invisible" android:layout_height="wrap_content" android:id="@+id/mnCbNotShowing" android:layout_alignParentLeft="true" android:text="@string/mnTxtNotShowing"></CheckBox>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/mnBtnRegistration" android:layout_toLeftOf="@+id/mnBtnOK" android:text="@string/mnBtnRegistration"></Button>
</RelativeLayout>
</LinearLayout>
