<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout android:id="@+id/menuAbl_01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/v2_mn_bg">
	<RelativeLayout android:layout_gravity="center"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/mnRlMsgList" android:layout_x="56dip"
		android:layout_y="91dip">
		<ImageButton android:layout_centerHorizontal="true"
			android:id="@+id/mnBtnMsgList" android:background="@drawable/v2_mn_btn_msglist"
			android:layout_below="@+id/mnTvMsgList" android:layout_height="80dip"
			android:layout_width="70dip" android:onClick="onClickButton"></ImageButton>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:id="@+id/mnTvMsgList" android:text="@string/mnBtnMsgList"
			android:textStyle="bold" android:textColor="#FFFFFF"></TextView>
	</RelativeLayout>
	<RelativeLayout android:layout_gravity="center"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/mnRlGrpList" android:layout_x="185dip"
		android:layout_y="162dip">
		<ImageButton android:layout_centerHorizontal="true"
			android:id="@+id/mnBtnGrpList" android:background="@drawable/v2_mn_btn_grplist"
			android:layout_below="@+id/mnTvGrpList" android:onClick="onClickButton"
			android:layout_width="70dip" android:layout_height="83dip"></ImageButton>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:text="@string/mnBtnGrpList" android:textStyle="bold"
			android:textColor="#FFFFFF" android:id="@+id/mnTvGrpList"></TextView>
	</RelativeLayout>

	<RelativeLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:id="@+id/mnRlAttachList" android:layout_x="151dip"
		android:layout_y="286dip">
		<ImageButton android:layout_centerHorizontal="true"
			android:id="@+id/mnBtnAttachList" android:background="@drawable/v2_mn_btn_attachment"
			android:layout_below="@+id/mnTvAttachList" android:onClick="onClickButton"
			android:layout_height="105dip" android:layout_width="85dip"></ImageButton>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:text="@string/mnBtnAttachList" android:textStyle="bold"
			android:textColor="#FFFFFF" android:id="@+id/mnTvAttachList"></TextView>
	</RelativeLayout>
	<RelativeLayout android:layout_height="wrap_content"
		android:layout_gravity="center" android:layout_width="wrap_content"
		android:layout_x="160dip" android:id="@+id/mnRlGrpSetting"
		android:layout_y="55dip">
		<ImageButton android:layout_centerHorizontal="true"
			android:background="@drawable/v2_mn_btn_grpsetting" android:id="@+id/mnBtnGrpSetting"
			android:layout_below="@+id/mnTvGrpSetting" android:onClick="onClickButton"
			android:layout_width="55dip" android:layout_height="58dip"></ImageButton>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:textStyle="bold" android:textColor="#FFFFFF" android:text="@string/mnBtnGrpSetting"
			android:id="@+id/mnTvGrpSetting"></TextView>
	</RelativeLayout>

	<RelativeLayout android:layout_height="wrap_content"
		android:layout_gravity="center" android:layout_width="wrap_content"
		android:id="@+id/mnRlSendMessage" android:layout_x="43dip"
		android:layout_y="210dip">
		<ImageButton android:layout_centerHorizontal="true"
			android:id="@+id/mnBtnSendMsg" android:background="@drawable/v2_mn_btn_sendmsg"
			android:layout_below="@+id/mnTvSendMsg" android:onClick="onClickButton"
			android:layout_width="85dip" android:layout_height="100dip">></ImageButton>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
			android:text="@string/mnBtnSendMsg" android:textStyle="bold"
			android:textColor="#FFFFFF"
			android:id="@+id/mnTvSendMsg"></TextView>
	</RelativeLayout>

	<ImageView android:layout_width="200dip"
		android:layout_height="35dip" android:layout_y="440dip"
		android:layout_x="65dip" android:id="@+id/mn_bottom_logo"></ImageView>


</AbsoluteLayout>
