<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/menuRl_01">
	<RelativeLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/menuRl_02"
		android:background="@drawable/v1_mn_bg"></RelativeLayout>


	<RelativeLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/menuRl_03"
		android:background="@drawable/v1_mn_bg2"></RelativeLayout>
	<AbsoluteLayout android:id="@+id/menuAbl_01"
		android:layout_height="fill_parent" android:layout_width="fill_parent">
		<RelativeLayout android:layout_gravity="center"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/mnRlMsgList" android:layout_x="66dip"
			android:layout_y="120dip">
			<ImageButton android:layout_centerHorizontal="true"
				android:id="@+id/mnBtnMsgList" android:background="@drawable/v1_mn_btn_msglist"
				android:layout_height="60dip" android:layout_width="60dip"
				android:onClick="onClickButton"></ImageButton>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_below="@+id/mnBtnMsgList"
				android:id="@+id/mnTvMsgList" android:text="@string/mnBtnMsgList"
				android:textStyle="bold" android:textColor="#FFFFFF"></TextView>
		</RelativeLayout>
		<RelativeLayout android:layout_gravity="center"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/mnRlGrpList" android:layout_x="180dip"
			android:layout_y="200dip">
			<ImageButton android:layout_centerHorizontal="true"
				android:id="@+id/mnBtnGrpList" android:background="@drawable/v1_mn_btn_grplist"
				android:layout_height="60dip" android:layout_width="60dip"
				android:onClick="onClickButton"></ImageButton>
			<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_below="@id/mnBtnGrpList"
				android:text="@string/mnBtnGrpList" android:textStyle="bold"
				android:textColor="#FFFFFF"></TextView>
		</RelativeLayout>
		<RelativeLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:id="@+id/mnRlAttachList" android:layout_x="160dip"
			android:layout_y="64dip">
			<ImageButton android:layout_centerHorizontal="true"
				android:id="@+id/mnBtnAttachList" android:background="@drawable/v1_mn_btn_attachment"
				android:layout_height="80dip" android:layout_width="80dip"
				android:onClick="onClickButton"></ImageButton>
			<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_below="@+id/mnBtnAttachList"
				android:text="@string/mnBtnAttachList" android:textStyle="bold"
				android:textColor="#FFFFFF"></TextView>
		</RelativeLayout>
		<RelativeLayout android:id="@+id/RelativeLayout04"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:layout_width="wrap_content" android:layout_x="160dip"
			android:layout_y="300dip">
			<ImageButton android:layout_centerHorizontal="true"
				android:background="@drawable/v1_mn_btn_grpsetting"
				android:layout_height="50dip" android:layout_width="50dip"
				android:onClick="onClickButton" android:id="@+id/mnBtnGrpSetting"></ImageButton>
			<TextView android:id="@+id/TextView04" android:layout_below="@id/mnBtnGrpSetting"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:textStyle="bold"
				android:textColor="#FFFFFF" android:text="@string/mnBtnGrpSetting"></TextView>
		</RelativeLayout>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_gravity="center" android:layout_width="wrap_content"
			android:id="@+id/mnRlSendMessage" android:layout_y="226dip"
			android:layout_x="58dip">
			<ImageButton android:layout_centerHorizontal="true"
				android:id="@+id/mnBtnSendMsg" android:background="@drawable/v1_mn_btn_sendmsg"
				android:layout_height="70dip" android:layout_width="70dip"
				android:onClick="onClickButton">></ImageButton>
			<TextView android:id="@+id/TextView05" android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:text="@string/mnBtnSendMsg"
				android:layout_below="@+id/mnBtnSendMsg" android:textStyle="bold"
				android:textColor="#FFFFFF"></TextView>
		</RelativeLayout>
	</AbsoluteLayout>
</RelativeLayout>
